--- a/test/stage4/style.css
+++ b/test/stage4/style.css
@@ -45,56 +45,27 @@
 .js-training .turquoise {
   background-color: turquoise;
   font-weight: normal;
+  text-align: right;
 }
 
-.js-training blockquote {
+.js-training .turquoise input {
+  background-color: hsla(0, 0%, 0%, 0.1);
+  width: 3em;
+  height: 40px;
+  border: none;
+  margin-left: 15%;
+  padding: 0 0 0 12px;
+
+  font-size: inherit;
+  color: inherit;
+  text-shadow: inherit;
+  text-align: center;
+}
+
+.js-training .steelblue {
   background-color: steelblue;
   margin: 0;
   height: 40px;
   font-size: 1;
   font-weight: normal;
-}
-
-.js-training [data-js-training="blueviolet"] {
-  background-color: blueviolet;
-}
-
-.js-training #brown {
-  background-color: brown;
-  font-weight: normal;
-}
-
-.js-training #darkorange {
-  background-color: darkorange;
-  font-weight: normal;
-}
-
-.js-training .limegreen {
-  background-color: limegreen;
-  font-weight: normal;
-}
-
-.js-training .mediumturquoise {
-  background-color: mediumturquoise;
-  font-weight: normal;
-}
-
-.js-training p {
-  margin: 0;
-  padding: 0;
-  background-color: cornflowerblue;
-  font-weight: normal;
-}
-
-.js-training [data-js-training="darkorchid"] {
-  background-color: darkorchid;
-}
-
-.js-training-trick {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  height: 40px;
-  line-height: 40px;
-  text-indent: 60%;
 }
